--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"/>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/styles.css"/>
 
-    <title>FEWD January 2022 Class Project</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-</body>
+        <title>FEWD January 2022 Class Project</title>
+    </head>
+    <body>
+        <h1>Best National Parks in the U.S.</h1>
+        <img src="images/maine.jpg" alt="Image of the ocean in Maine" width="500">
+
+                <table class="table-park">
+                    <tr>
+                        <th>State Park Name</th>
+                        <th>Year Established</th>
+                        <th>State Located</th>
+                    </tr>
+                    <tr>
+                        <td>Acadia National Park</td>
+                        <td>1916</td>
+                        <td>Maine</td>
+                    </tr>
+                    <tr>
+                        <td>Olympic National Park</td>
+                        <td>1938</td>
+                        <td>Washington</td>
+                    </tr>
+                </table>
+    </body>
 </html>
