adjusted some styling and content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>FEWD January 2022 Class Project</title>
     </head>
     <body>
-        <h1>Best National Parks in the U.S.</h1>
+        <h1>The Best National Parks in the U.S.</h1>
         <img src="images/maine.jpg" alt="Image of the ocean in Maine" width="500">
 
                 <table class="table-park">
