--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>The Best National Parks in the U.S.</h1>
-        <img src="images/maine.jpg" alt="Image of the ocean in Maine" width="500">
+        <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
 
                 <table class="table-park">
                     <tr>
