update content and features

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
         <title>FEWD January 2022 Class Project</title>
     </head>
     <body>
-        <h1>The Best National Parks in the U.S.</h1>
-        <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
-
+        <nav>
+            <h1>The Best National Parks in the U.S.</h1>
+        </nav>
+        <div class="main-container">
+            <div class="item item-one">
+                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
                 <table class="table-park">
                     <tr>
                         <th>State Park Name</th>
@@ -29,5 +32,49 @@
                         <td>Washington</td>
                     </tr>
                 </table>
+            </div>
+
+            <div class="item item-two">
+                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
+                <table class="table-park">
+                    <tr>
+                        <th>State Park Name</th>
+                        <th>Year Established</th>
+                        <th>State Located</th>
+                    </tr>
+                    <tr>
+                        <td>Acadia National Park</td>
+                        <td>1916</td>
+                        <td>Maine</td>
+                    </tr>
+                    <tr>
+                        <td>Olympic National Park</td>
+                        <td>1938</td>
+                        <td>Washington</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="item item-three">
+                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
+                <table class="table-park">
+                    <tr>
+                        <th>State Park Name</th>
+                        <th>Year Established</th>
+                        <th>State Located</th>
+                    </tr>
+                    <tr>
+                        <td>Acadia National Park</td>
+                        <td>1916</td>
+                        <td>Maine</td>
+                    </tr>
+                    <tr>
+                        <td>Olympic National Park</td>
+                        <td>1938</td>
+                        <td>Washington</td>
+                    </tr>
+                </table>
+            </div>
+         </div>
     </body>
 </html>
