adjusted styling further, added header and logo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
         <title>FEWD January 2022 Class Project</title>
     </head>
     <body>
-        <nav>
-            <h1>The Best National Parks in the U.S.</h1>
-        </nav>
+        <header>
+            <nav>
+                <img id="nav-logo" src="images/national_parks_logo.png" alt="Logo of the National Parks service">
+                <h1>The Best National Parks in the U.S.</h1>
+            </nav>
+        </header>
         <div class="main-container">
             <div class="item item-one">
-                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
+                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine">
                 <table class="table-park">
                     <tr>
                         <th>State Park Name</th>
