begin working on the responsiveness of the items

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="item item-two">
-                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
+                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine">
                 <table class="table-park">
                     <tr>
                         <th>State Park Name</th>
@@ -59,7 +59,7 @@
             </div>
 
             <div class="item item-three">
-                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine" width="500">
+                <img src="images/maine_comp.jpg" alt="Image of the ocean in Maine">
                 <table class="table-park">
                     <tr>
                         <th>State Park Name</th>
